# lab1_python_mai

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: calculate.py  calculate_rpn.py  main.py  priority.py  tokenizer.py
tests/: tests.py
